k8s-dashboard/k8s-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-dashboard-httproute
  namespace: envoy-gw
spec:
  parentRefs:
    - name: envoy-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard
          port: 443
          namespace: k8s-dashboard
